@@ -1,3 +1,7 @@
+2005-08-26 Kalpit Desai <kvdesai@email.unc.edu>
+	* threePoleFreqSweep.m: version 1.1
+	- Now puts (sum of squares of coil excitations)/100 on hardware channel 6 of magnet DAC. This channel is read into the tracking ADC for offline synchronization.
+
 2005-08-24 Kalpit Desai <kvdesai@email.unc.edu>
 	* threePoleFreqSweep.m: Removed junk code for non-existent slider for 'period' setting. 
 
